# utilsforecast

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  compat.html  compat.mdx  data.html  data.html.mdx  data.mdx  docs.json  environment.yml  evaluation.html  evaluation.html.mdx  evaluation.mdx  feature_engineering.html  feature_engineering.html.mdx  feature_engineering.mdx  grouped_array.html  grouped_array.mdx  index.html  index.html.mdx  index.mdx  losses.html  losses.html.mdx  losses.mdx  mint.json  mkdocs.yml  plotting.html  plotting.html.mdx  plotting.mdx  preprocessing.html  preprocessing.html.mdx  preprocessing.mdx  processing.html  processing.mdx  pyproject.toml  robots.txt  search.json  (+8 more)
.github/workflows/: build-docs.yaml  ci.yaml  lint.yaml  pytest.yml  release-drafter.yml  release.yml
action_files/: clean_nbs  lint  remove_logs_cells
bash_scripts/: cli.ipynb  cli.py  extract_test.sh
dev/: requirements.txt
docs/: conf.py  convert_to_mkdocstrings.py  data.html.md  data.md  evaluation.html.md  evaluation.md  feature_engineering.html.md  feature_engineering.md  index.md  index.rst  losses.html.md  losses.md  modules.rst  plotting.html.md  plotting.md  preprocessing.html.md  preprocessing.md  to_mdx.py  utilsforecast.rst
docs/api/: data.md  evaluation.md  feature_engineering.md  preprocessing.md  processing.md
docs/mintlify/: docs.json  mint.json
docs/stylesheets/: extra.css
docs/tutorials/: multi_objective_model_selection.html.mdx  rectify_strategy.html.mdx
nbs/: _quarto.yml  compat.ipynb  data.ipynb  evaluation.ipynb  feature_engineering.ipynb  grouped_array.ipynb  index.ipynb  losses.ipynb  nbdev.yml  plotting.ipynb  preprocessing.ipynb  processing.ipynb  sidebar.yml  synthetic_data_generation.ipynb  target_transforms.ipynb  utils.ipynb  validation.ipynb
nbs/docs/tutorials/: multi_objective_model_selection.ipynb  rectify_strategy.ipynb
scripts/: cli.py  extract_test.sh
tests/: test_data.py  test_ensembles.py  test_evaluation.py  test_feature_engineering.py  test_grouped_array.py  test_index.py  test_losses.py  test_plotting.py  test_preprocessing.py  test_processing.py  test_rectify.py  test_synthetic.py  test_validation.py
utilsforecast/: __init__.py  _modidx.py  cli.py  compat.py  data.py  ensembles.py  evaluation.py  feature_engineering.py  grouped_array.py  losses.ipynb  losses.py  model_selection.py  plotting.py  preprocessing.py  processing.py  rectify.py  synthetic.py  target_transforms.py  utils.py  validation.py
